--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "@testing-library/user-event": "^12.3.0",
     "react": "^17.0.1",
     "react-animated-modal": "^1.1.1",
+    "react-confetti": "^6.0.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-spring": "^8.0.27",
+    "react-use": "^15.3.4",
     "rodal": "^1.8.1",
     "web-vitals": "^0.2.4"
   },
