--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.3.0",
+    "nodesass": "0.0.2-security",
+    "randomcolor": "^0.6.2",
     "react": "^17.0.1",
     "react-animated-modal": "^1.1.1",
     "react-confetti": "^6.0.0",
