--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "randomcolor": "^0.6.2",
     "react": "^17.0.1",
     "react-animated-modal": "^1.1.1",
+    "react-compound-timer": "^1.2.0",
     "react-confetti": "^6.0.0",
+    "react-confirm-alert": "^2.6.2",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
